specified units on response values in bones or DC

--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -341,8 +341,9 @@ _Query Parameters_
 
 :::note Transaction Units
 
-Remember that transaction units are in `bones`. Read more
-[here](/api/blockchain/introduction/#transaction-units)
+The `fee` is returned in **Data Credits**.
+
+Read more [here](/api/blockchain/introduction/#transaction-units)
 
 :::
 
