--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -1142,6 +1142,13 @@ Remember that transaction units are in `bones`. Read more
 
 ## Currently Elected Hotspots
 
+:::warning
+
+With the passing of [HIP25](https://github.com/helium/HIP/blob/main/0025-validators.md) Hotspots are
+no longer elected to Concensus Groups.
+
+:::
+
 ```
 GET https://api.helium.io/v1/hotspots/elected
 ```
