--- a/docs/api/blockchain/pending-transactions.mdx
+++ b/docs/api/blockchain/pending-transactions.mdx
@@ -41,8 +41,9 @@ A successful pending transaction status request
 
 :::note Transaction Units
 
-Remember that transaction units are in `bones`. Read more
-[here](/api/blockchain/introduction/#transaction-units)
+Remember that `amount` values are in `bones` while `fee` values are in `Data Credits`.
+
+Read more [here](/api/blockchain/introduction/#transaction-units)
 
 :::
 
