--- a/docs/api/blockchain/stats.mdx
+++ b/docs/api/blockchain/stats.mdx
@@ -104,7 +104,7 @@ _No Parameters_
 GET https://api.helium.io/v1/stats/token_supply
 ```
 
-Returns the circulating token supply in either JSON or raw form.
+Returns the circulating token supply in either JSON or raw form in HNT.
 
 <Tabs
   block={true}
