--- a/docs/api/blockchain/transactions.mdx
+++ b/docs/api/blockchain/transactions.mdx
@@ -40,8 +40,9 @@ Transaction successfully retrieved.
 
 :::note Transaction Units
 
-Remember that transaction units are in `bones`. Read more
-[here](/api/blockchain/introduction/#transaction-units)
+Remember that `amount` values are in `bones` while `fee` values are in `Data Credits`.
+
+Read more [here](/api/blockchain/introduction/#transaction-units)
 
 :::
 
