--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -31,14 +31,16 @@ Note that connecting more than one Small Cell Radio will require an additional n
 Refer to the 5G Hotspot Maker installation guides for specific instructions.
 
 Instructions on installing a CBRS Small Cell Radio and registration with the SAS are provided by the
-individual 5G Hotspot Makers. As an example, see the FreedomFi installation guides here:
+individual 5G Hotspot Makers.
+
+For FreefomFi Gateways refer to the installation guides here:
 
 - [FreedomFi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
 - [FreedomFi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
 
-You can also find further CBRS radio troubleshooting guide from the Bobcat Knowledge Center: 
-  
-- [CBRS Radio Troubleshooting Guide](https://bobcatminer.zendesk.com/hc/en-us/articles/7282743642395-Troubleshooting-Issues-with-the-Indoor-CBRS-Small-Cell-Radio)
+For Bobcat500 Gateways refer to the Bobcat Knowledge Center:
+
+- [Bobcat Knowledge Center CBRS Radio Troubleshooting Guide](https://bobcatminer.zendesk.com/hc/en-us/articles/7282743642395-Troubleshooting-Issues-with-the-Indoor-CBRS-Small-Cell-Radio)
 
 :::warning
 
@@ -48,19 +50,22 @@ fines and/or criminal penalties.
 
 :::
 
+## Access Gateway and Radio Dashboards
+
 Once the 5G Hotspot is onboarded and a Small Cell Radio is physically installed, the Small Cell
 Radio will automatically initialize and acquire a GPS lock. Once that is complete, the Small Cell
 Radio dashboard appears under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
 
-> [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+- If you are using a FreedomFi gateway, you can access the miner and radio dashboard via the URL:
+  [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
-If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL: 
-> [http://bobber-gateway.local/](http://bobber-gateway.local/)
+- If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL:
+  [http://bobber-gateway.local/](http://bobber-gateway.local/)
 
 5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 2-4 days,
 depending on how quickly it is registered in the SAS.
 
-### Install the Helium Wallet App to Manage HNT/MOBILE Token
+## Install the Helium Wallet App to Manage HNT/MOBILE Token
 
 - [App Store](https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848)
 - [Google Play](https://play.google.com/store/apps/details?id=com.helium.wallet.app&gl=US)
