--- a/docs/mine-hnt/validators/testnet/expectations.mdx
+++ b/docs/mine-hnt/validators/testnet/expectations.mdx
@@ -7,9 +7,9 @@ slug: /mine-hnt/validators/testnet/expectations
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-As Validators will play an important role in the expansion, stability and success of the Helium
-network moving forward, it's important to set expectations for running a Validator, especially
-during the Testnet process.
+As Validators are playing an important role in the expansion, stability and success of the Helium
+network, it's important to set expectations for running a Validator, especially on the Testnet, 
+where critical changes are often tested.
 
 In participating in Testnet, the expectations are that you will:
 
@@ -30,13 +30,4 @@ In participating in Testnet, the expectations are that you will:
   docker images and controls.
 
 The Helium team as well as the greater Helium community is continually attemping to make this
-process as clear and easy to understand as possible. However, during this time you can expect much
-change.
-
-:::warning
-
-We understand that not everyone will be able to meet these expectations. It may be better to wait
-for the public availability of validators. There will be future announcements on the availability of
-staking your own validator on mainnet.
-
-:::
+process as clear and easy to understand as possible.
