spacing on example calculations for readability

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -169,10 +169,10 @@ radio type.
 In this example, the total rewards Points per epoch is 4,000 and the ratios are as follows:
 
 ```bash
-  (High-Power Outdoor Count (  150) * 4.0)    =>      600
-+            (Outdoor Count (  800) * 2.5)    =>  + 2,000
-+             (Indoor Count (1,400) * 1.0)    =>  + 1,400
--------------------------------------------       --------
+  High-Power Outdoor Count (  150) * 4.0    =>      600
++            Outdoor Count (  800) * 2.5    =>  + 2,000
++             Indoor Count (1,400) * 1.0    =>  + 1,400
+-----------------------------------------       --------
                                                     4,000
 ```
 
