‘DPA Event’ renamed to ‘DPA Activation event’

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -110,9 +110,9 @@ change frequently.
 A Dynamic Protection Area (DPA) is a geographic region where incumbents (Tier 1 users) get
 protection from PAL and GAA interference.
 
-During a DPA event, all Small Cell Radios in the given DPA Neighborhood are disabled by the SAS.
-There is nothing that you need or can do in these scenarios. The SAS will automatically re-grant
-Spectrum Access once the DPA event has concluded.
+During a DPA Activation event, all Small Cell Radios in the given DPA Neighborhood are disabled by
+the SAS. There is nothing that you need or can do in these scenarios. The SAS will automatically
+re-grant Spectrum Access once the DPA Activation event has concluded.
 
 A message similar to the following may also be present:
 
@@ -123,7 +123,7 @@ A message similar to the following may also be present:
 ### DPA Neighborhood Regions
 
 DPA regions can be viewed on the map below. Remember, these coordinates are not exact, and the
-effected regions for each DPA Event can reach as far as 150km inland.
+effected regions for each DPA Activation event can reach as far as 150km inland.
 
 <div class="maps_iframe">
   <iframe
