added link to FreedomFi Status Page

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -105,6 +105,15 @@ change frequently.
   </div>
 </div>
 
+### FreedomFi Dashboard
+
+## Confirm the Network is Working
+
+Visit the [FreedomFi Status page](https://status.helium.freedomfi.com/).
+
+This status page will provide the latest updates on important issues that impact users like Device
+Onboarding, SAS services or other major events.
+
 ### Spectrum Access `None` Status
 
 A Dynamic Protection Area (DPA) is a geographic region where incumbents (Tier 1 users) get
