installtion guide header

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -30,6 +30,8 @@ coverage area. 5G Hotspots can support as many Small Cell Radios as would satura
 Note that connecting more than one Small Cell Radio will require an additional networking switch.
 Refer to the 5G Hotspot Maker installation guides for specific instructions.
 
+## Installation and Setup Guides
+
 Instructions on installing a CBRS Small Cell Radio and registration with the SAS are provided by the
 individual 5G Hotspot Makers.
 
