added FreedomFi Status Page link (#965)
* updated reward weighting and sample calculations

- replaced “Units” with “Points”
- increased example calculation numbers to closer align to expectations
- reward scaling weights updated

* example rewards calculation numbers updates

* spacing on example calculations for readability

* ‘DPA Event’ renamed to ‘DPA Activation event’

* added link to FreedomFi Status Page

* reorganized sections for reading flow

* installtion guide header

* typo fix, moved FreeddomFi Status page higher up

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -30,6 +30,8 @@ coverage area. 5G Hotspots can support as many Small Cell Radios as would satura
 Note that connecting more than one Small Cell Radio will require an additional networking switch.
 Refer to the 5G Hotspot Maker installation guides for specific instructions.
 
+## Installation and Setup Guides
+
 Instructions on installing a CBRS Small Cell Radio and registration with the SAS are provided by the
 individual 5G Hotspot Makers.
 
@@ -169,10 +171,10 @@ radio type.
 In this example, the total rewards Points per epoch is 4,000 and the ratios are as follows:
 
 ```bash
-  (High-Power Outdoor Count (  150) * 4.0)    =>      600
-+            (Outdoor Count (  800) * 2.5)    =>  + 2,000
-+             (Indoor Count (1,400) * 1.0)    =>  + 1,400
--------------------------------------------       --------
+  High-Power Outdoor Count (  150) * 4.0    =>      600
++            Outdoor Count (  800) * 2.5    =>  + 2,000
++             Indoor Count (1,400) * 1.0    =>  + 1,400
+-----------------------------------------       --------
                                                     4,000
 ```
 
