--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # CBRS Small Cell Radios
 
-Instead of an LoRa antenna, Helium 5G Hotspots use Citizens Broadband Radio Service (CBRS) Radios to
+Instead of a LoRa antenna, Helium 5G Hotspots use Citizens Broadband Radio Service (CBRS) Radios to
 provide cellular coverage. CBRS is a wide broadcast 3.5Ghz band in the United States that does not
 require a 5G Hotspot Host to acquire spectrum licenses.
 
@@ -67,6 +67,13 @@ Gbps or your internet speed, whichever is lower.
 
 ## Troubleshooting
 
+### Confirm the Network is Working
+
+Visit the [FreedomFi Status page](https://status.helium.freedomfi.com/).
+
+This status page will provide the latest updates on important issues that impact users like Device
+Onboarding, SAS services, or other major events.
+
 ### Spectrum Access on the 5G Hotspot Dashboard
 
 The Spectrum Access status will be in one of four states. It is not uncommon to see this status
@@ -84,8 +91,8 @@ change frequently.
     <div class="col col--3" style={{ marginBottom: 0 }}>
       <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-connected-small.png')} />
       <p>
-        The Spectrum Access was recently <code>None</code> and is comming back
-        online, this status should be transitory.
+        The Spectrum Access was recently <code>None</code> and is coming back online, this status
+        should be transitory.
       </p>
     </div>
     <div class="col col--3" style={{ marginBottom: 0 }}>
@@ -110,9 +117,9 @@ change frequently.
 A Dynamic Protection Area (DPA) is a geographic region where incumbents (Tier 1 users) get
 protection from PAL and GAA interference.
 
-During a DPA event, all Small Cell Radios in the given DPA Neighborhood are disabled by the SAS.
-There is nothing that you need or can do in these scenarios. The SAS will automatically re-grant
-Spectrum Access once the DPA event has concluded.
+During a DPA Activation event, all Small Cell Radios in the given DPA Neighborhood are disabled by
+the SAS. There is nothing that you need or can do in these scenarios. The SAS will automatically
+re-grant Spectrum Access once the DPA Activation event has concluded.
 
 A message similar to the following may also be present:
 
@@ -120,10 +127,24 @@ A message similar to the following may also be present:
 > Suspension can last from hours to days for DPA Events. Contact support if you have been suspended
 > for more than 48hrs. This is more prevalent if your location is within 150km of the DPA Regions.
 
+### Spectrum Access `FAILURE` Status
+
+This status is alarming, but do not let it scare you.
+
+For newly installed Small Cell Radios, this "Failure" status is likely because the registration
+process has not been completed and submitted to the SAS.
+
+You may see an information pop-up similar to this:
+
+> SAS status code: 200 SAS response message: Response data: installationParam
+
+For any other warning messages, contact [FreedomFi Support](https://freedomfi.com/contact-us/)
+directly.
+
 ### DPA Neighborhood Regions
 
 DPA regions can be viewed on the map below. Remember, these coordinates are not exact, and the
-effected regions for each DPA Event can reach as far as 150km inland.
+effected regions for each DPA Activation event can reach as far as 150km inland.
 
 <div class="maps_iframe">
   <iframe
@@ -142,20 +163,6 @@ This link and the included information are for reference only and may not addres
 Neighborhoods.
 
 :::
-
-### Spectrum Access `FAILURE` Status
-
-This status is alarming, but do not let it scare you.
-
-For newly installed Small Cell Radios, this "Failure" status is likely because the registration
-process has not been completed and submitted to the SAS.
-
-You may see an information pop up similar to this:
-
-> SAS status code: 200 SAS response message: Response data: installationParam
-
-For any other warning messages, contact [FreedomFi Support](https://freedomfi.com/contact-us/)
-directly.
 
 ### Small Cell Radios Need GPS
 
