--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -52,7 +52,7 @@ HNT halving happens every two years from the genesis block, on the following sch
 
 In the below issuance schedule, year 1 starts on **August 1, 2019**. The first halving happened on
 approximately day one of the beginning of year three, **August 1, 2021**. The network is now
-producing `2,500,000` HNT until the next scheduled halving.
+producing `2,500,000` HNT per month until the next scheduled halving.
 
 :::
 
