spacing and formula cleanup

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -182,10 +182,10 @@ In this example, the total rewards Points per epoch is 4,000 and the ratios are 
 
 Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
 
-> Small Cell Reward = Epoch Rewards x Model Reward Weight / Total Reward Points
+> Small Cell Reward = Daily Rewards \* Small Cell Points Ratio / Count of Small Cell Type
 
 ```bash
 High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
-Outdoor             => 100,000,000 * 0.50 /   800 =  62,500 MOBILE per day
-Indoor              => 100,000,000 * 0.35 / 1,400 =  25,000 MOBILE per day
+           Outdoor  => 100,000,000 * 0.50 /   800 =  62,500 MOBILE per day
+            Indoor  => 100,000,000 * 0.35 / 1,400 =  25,000 MOBILE per day
 ```
