--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -15,12 +15,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 	</div>
 		<div class="col col--6">
 			<h1 className="bigger">Get Started <br/>with Helium</h1>
-			<h2 className="subtitle">Build amazing connected solutions on the world’s largest decentralized wireless network.</h2>
+			<h2 className="subtitle">Build amazing connected solutions on the world’s largest decentralized wireless networks.</h2>
     	</div>
     	<div class="col col--6">
     		<a className="quicklink" href="/blockchain">Learn about the Helium Blockchain <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    			<a className="quicklink quicklinkblue" href="/mine-hnt">Learn about mining HNT <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
-    							<a className="quicklink quicklinkgreen" href="/use-the-network">Build Devices to use the Network <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
+          <a className="quicklink quicklinkblue" href="/mine-hnt">Learn about mining Tokens <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
+          <a className="quicklink quicklinkgreen" href="/use-the-network">Build Devices to use the Network <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
     			<a className="quicklink quicklinkred" href="/community-governance">Submit a Helium Improvement Proposal (HIP) <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
     	</div>
     </div>
@@ -58,16 +58,35 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
-  	<div class="col col--12">
-  		<h2>Introduction</h2>
-  	</div>
-    <div class="col col--6">
-    	<p>Helium is a global, distributed network of Hotspots that create public, long-range wireless coverage for LoRaWAN-enabled IoT devices. Hotspots produce and are compensated in HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks. Today, the Helium blockchain, and its <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>, provide access to the largest LoRaWAN Network in the world.</p>
+    <div class="col col--12">
+      <h2>Introduction</h2>
     </div>
     <div class="col col--6">
-    	<p>This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. </p>
-    	<p>If, at any time, you don't find what you need, join us in <a href="https://discord.gg/helium">our Discord</a>.</p>
-    	<p style={{fontWeight: 600}}>Thanks for being a part of Helium.</p>
+      <p>
+        Helium is a global, distributed network of Hotspots that create public, long-range wireless
+        coverage for LoRaWAN-enabled IoT devices and CBRS Cellular Data Coverage. Hotspots produce
+        and are compensated in HNT, IOT or MOBILE the native cryptocurrencies of the Helium
+        Blockchain.
+      </p>
+      <p>
+        The Helium Blockchain is a new, open source, public blockchain created entirely to
+        incentivize the creation of physical, decentralized wireless networks. Today, the Helium
+        Blockchain, and its{' '}
+        <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>,
+        provide access to the largest LoRaWAN Network in the world.
+      </p>
+    </div>
+    <div class="col col--6">
+      <p>
+        This documentation provides details on the technology that underpins Helium, as well as how
+        to mine Tokens, how to deploy IoT devices, and how to setup 5G CBRS Small Cell Radios that
+        use the Helium Network. Start your journey below.{' '}
+      </p>
+      <p>
+        If, at any time, you don't find what you need, join us in{' '}
+        <a href="https://discord.gg/helium">our Discord</a>.
+      </p>
+      <p style={{ fontWeight: 600 }}>Thanks for being a part of Helium.</p>
     </div>
   </div>
 </div>
@@ -88,9 +107,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/blockchain/blockchain-primitives">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Blockchain Primitives
       </a>
-      <a className="block" href="/blockchain/mining">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mining HNT
-      </a>
       <a className="block" href="/blockchain/proof-of-coverage">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Proof of Coverage
       </a>
@@ -98,7 +114,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
       <a className="block" href="/blockchain/helium-token">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Helium Token
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Helium Tokens
       </a>
       <a className="block" href="/blockchain/transaction-fees">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Transaction Fees
@@ -106,10 +122,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
     <div class="col col--6 blockblue" style={{ marginBottom: 100 }}>
       <img className="homeicon" src={useBaseUrl('img/home/mineicon.png')} />
-      <h3>Mine $HNT</h3>
+      <h3>Mine Tokens</h3>
       <p className="podtext">
         Hotspots create The People’s Network, a long-range wireless coverage for very low power and
-        inexpensive IoT devices and are rewarded $HNT for doing so.
+        inexpensive IoT devices and are rewarded HNT for doing so.
       </p>
       <a href="/mine-hnt">
         Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrowblue.svg')} />
@@ -118,6 +134,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/mine-hnt">
         <img className="docicon" src={useBaseUrl('img/icons/dociconblue.svg')} /> What is a Helium
         Miner?
+      </a>
+      <a className="block" href="/blockchain/mining">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mining Tokens
       </a>
       <a className="block" href="https://helium.com/mine">
         <img className="docicon" src={useBaseUrl('img/icons/dociconblue.svg')} /> Approved Hotspots
@@ -218,12 +237,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         </div>
       </div>
       <div className="tech--item">
-        <img className="techicon" src={useBaseUrl('img/home/walletapp.svg')} />
+        <img className="techicon" src={useBaseUrl('img/home/longfi.svg')} />
         <div className="tech--item_text">
-          <a href="https://helium.com/app">
-            <h4>Wallet App</h4>
+          <a href="https://github.com/helium/gateway-rs">
+            <h4>Helium Light Hotspots</h4>
           </a>
-          <p>iOS & Android Helium Wallet</p>
+          <p>Packet forwarder for the Helium-enabled Gateways.</p>
         </div>
       </div>
     </div>
@@ -238,12 +257,21 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         </div>
       </div>
       <div className="tech--item">
-        <img className="techicon" src={useBaseUrl('img/home/longfi.svg')} />
+        <img className="techicon" src={useBaseUrl('img/home/walletapp.svg')} />
         <div className="tech--item_text">
-          <a href="https://github.com/helium/gateway-rs">
-            <h4>Helium Light Hotspots</h4>
+          <a href="/wallets/helium-wallet-app">
+            <h4>Wallet App</h4>
           </a>
-          <p>Packet forwarder for the Helium-enabled Gateways.</p>
+          <p>iOS & Android Helium Wallet</p>
+        </div>
+      </div>
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl('img/home/hotspotapp.svg')} />
+        <div className="tech--item_text">
+          <a href="/wallets/app-wallet">
+            <h4>Helium Hotspot App</h4>
+          </a>
+          <p>iOS & Android Helium Hotspot Management App</p>
         </div>
       </div>
     </div>
