swappgin token types for HNT
- update wallet and hotspot app links
- swap $HNT for HNT
- broaded language to include IOT and MOBILE tokens

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -14,9 +14,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div class="flex">
         <img className="headericon" src={useBaseUrl('img/blockchain/blockchainicon.png')} />
         <div className="headertext">
-          <h1 style={{ marginTop: 0 }}>The Helium Blockchain</h1>
+          <h1 style={{ marginTop: 0 }}>The Helium blockchain</h1>
           <h2 className="subtitle">
-            The Helium Blockchain is a new blockchain built from the ground up to incentivize the
+            The Helium blockchain is a new blockchain built from the ground up to incentivize the
             creation of decentralized, public wireless networks.
           </h2>
           <div>
@@ -43,17 +43,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
     <div class="col col--6">
       <p>
-        The Helium Blockchain is based on a new, novel work algorithm called Proof of Coverage
-        (PoC), and rewards miners in $HNT, the native token of the Helium blockchain. Officially
-        launched on July 29, 2019, the Helium Blockchain powers{' '}
+        The Helium blockchain is based on a new, novel work algorithm called Proof of Coverage
+        (PoC), and rewards miners in HNT, IOT, and MOBILE, the native tokens of the Helium
+        Blockchain. Officially launched on July 29, 2019, the Helium blockchain powers{' '}
         <a href="https://explorer.helium.com">
-          the largest, public, decentralized LoRaWAN Network in the world
-        </a>
-        .
+          the largest, public, decentralized LoRaWAN Network in the world.
+        </a>{' '}
       </p>
       <p style={{ marginBottom: 50 }}>
         If you are a developer and interested in contributing, or simply just interested in learning
-        more, join us in the #blockchain-development channel on{' '}
+        more, join us in the <a href="discord://discord.com/channels/404106811252408320/730245219974381708"> #blockchain-development </a> channel on{' '}
         <a href="https://discord.gg/helium">our Discord</a>.
       </p>
     </div>
@@ -75,8 +74,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
       <a className="block" href="/blockchain/helium-token">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Token
-        ($HNT)
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Tokens
       </a>
       <a className="block" href="/blockchain/oracles">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Oracles
@@ -85,5 +83,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Transaction Fees
       </a>
     </div>
+
   </div>
 </div>
